--- a/app/index.html
+++ b/app/index.html
@@ -20,22 +20,28 @@
   <body>
     <header>
       <img src="assets/images/icons/platinum_travel.svg" />
-      <a href="#">Хамт аялах</a>
+      <a href="#" class="btn">Хамт аялах</a>
       <nav>
         <ul>
           <li><a href="#our-beginning">Эхлэл</a></li>
           <li><a href="#features">Онцлогууд</a></li>
-          <li><a href="#testimonials">Талархал</a></li>
+          <li><a href="#testimonials">Талархалт</a></li>
         </ul>
       </nav>
     </header>
 
     <div class="large-hero">
-      <img src="assets/images/hero--large.jpg" />
-      <h1>Таны нандин дурсамж.</h1>
-      <h2>Ганцхан алхам үлдлээ.</h2>
-      <p>Бид таны амьдралыг аз жаргал, адал явдлаар дүүргэх болно.</p>
-      <p><a href="#">Өнөөдөр эхлэе</a></p>
+      <picture>
+        <img src="assets/images/hero--smaller.jpg" alt="ocean view" />
+      </picture>
+      <div class="large-hero__text-content">
+        <h1 class="large-hero__large-title">Таны нандин дурсамж.</h1>
+        <h2 class="large-hero__sub-title">Ганцхан алхам үлдлээ.</h2>
+        <p class="large-hero__description">
+          Бид таны амьдралыг аз жаргал, адал явдлаар дүүргэх болно.
+        </p>
+        <p><a href="#" class="btn btn--orange btn--large">Өнөөдөр эхлэе</a></p>
+      </div>
     </div>
 
     <div id="our-beginning">
@@ -148,7 +154,7 @@
     <footer>
       <p>
         Copyright &copy; 2019 Platinum Travel. All rights reserved.
-        <a href="#">Хамт аялах</a>
+        <a href="#" class="btn btn--orange">Хамт аялах</a>
       </p>
     </footer>
     <!-- "modal" хичээлийг үзтэлээ энэ тайлбар бүхий хэсгийг битгий нээгээрэй
@@ -169,5 +175,6 @@
     <div class="modal__close">X</div>
   </div>
   This is the end of the "modal" reference HTML -->
+    <script src="bundled.js"></script>
   </body>
 </html>
